--- a/resources/assets/styles/components/_buttons.scss
+++ b/resources/assets/styles/components/_buttons.scss
@@ -25,24 +25,6 @@ $btn-link-disabled-color: $gray-600 !default;
 $btn-block-spacing-y: 0.5rem !default;
 
 .btn {
-  //display: inline-block;
-  //font-family: $btn-font-family;
-  //font-weight: $btn-font-weight;
-  //color: $body-color;
-  //text-align: center;
-  //text-decoration: if($link-decoration == none, null, none);
-  //white-space: $btn-white-space;
-  //vertical-align: middle;
-  //user-select: none;
-  //background-color: transparent;
-  //border: $btn-border-width solid transparent;
-  //@include button-size($btn-padding-y, $btn-padding-x, $btn-font-size, $btn-line-height, 0);
-  ////@include transition($btn-transition);
-  //@include hover() {
-  //  color: $body-color;
-  //  text-decoration: none;
-  //}
-  //
   &:focus,
   &.focus {
     outline: 0;
@@ -87,18 +69,11 @@ $btn-block-spacing-y: 0.5rem !default;
   margin: 0 auto;
   outline: none;
 
-  .text,
   .icon-container {
     position: relative;
     z-index: 2;
-  }
-
-  .icon-container {
-    --icon-size: 25px;
-
-    position: relative;
-    width: var(--icon-size);
-    height: var(--icon-size);
+    width: 25px;
+    height: 25px;
     margin-left: 15px;
     transition: transform 500ms ease;
 
@@ -106,8 +81,8 @@ $btn-block-spacing-y: 0.5rem !default;
       position: absolute;
       left: 0;
       top: 0;
-      width: var(--icon-size);
-      height: var(--icon-size);
+      width: 25px;
+      height: 25px;
       transition: transform 500ms ease, opacity 250ms ease;
 
       &--left {
@@ -132,21 +107,28 @@ $btn-block-spacing-y: 0.5rem !default;
     text-transform: none;
     margin: 40px 0 0 0;
 
-    .icon-container .icon svg {
-      fill: $danger;
+    .icon-container .icon {
+      width: 20px;
+      height: 20px;
+
+      svg {
+        fill: $danger;
+      }
     }
   }
 
   &::after {
     content: "";
     position: absolute;
-    left: -1px;
-    top: -1px;
     width: 100%;
     height: 100%;
     background: transparent;
     z-index: 1;
     transition: transform 500ms ease;
+  }
+
+  &:focus {
+    outline: 0;
   }
 
   &:hover {
@@ -170,5 +152,17 @@ $btn-block-spacing-y: 0.5rem !default;
         }
       }
     }
+  }
+
+  &.btn-order--servises:hover .icon-container {
+    transform: translateX(65%);
+
+    .icon svg {
+      fill: $white;
+    }
+  }
+
+  &.btn-order--servises:hover::after {
+    transform: translateX(80%);
   }
 }
