--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -24,6 +24,7 @@
 @import "components/wp-classes";
 @import "components/accordion";
 @import "components/owl-carousel";
+@import "components/testimonial";
 @import "sections/servises";
 @import "sections/how-work";
 @import "sections/staff";
