--- a/resources/assets/styles/common/_global.scss
+++ b/resources/assets/styles/common/_global.scss
@@ -4,6 +4,7 @@ html {
 
 body {
   height: 100%;
+  background-color: $gray-100;
   display: grid;
   grid-template-rows: min-content 1fr min-content;
 }
