added category page and service page

--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -25,6 +25,9 @@
 @import "components/accordion";
 @import "components/owl-carousel";
 @import "components/testimonial";
+@import "components/services-cat";
+@import "components/service-slider";
+@import "components/breadcrumbs";
 @import "sections/servises";
 @import "sections/how-work";
 @import "sections/staff";
@@ -36,6 +39,7 @@
 @import "sections/about";
 @import "sections/FAQ";
 @import "sections/map";
+@import "sections/free-advice";
 @import "layouts/header";
 @import "layouts/sidebar";
 @import "layouts/footer";
