--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -28,7 +28,8 @@
 @import "components/services-cat";
 @import "components/service-slider";
 @import "components/breadcrumbs";
-@import "sections/servises";
+@import "components/gallery";
+@import "sections/services";
 @import "sections/how-work";
 @import "sections/staff";
 @import "sections/advantages";
