--- a/resources/assets/styles/common/_variables.scss
+++ b/resources/assets/styles/common/_variables.scss
@@ -17,7 +17,8 @@ $grid-breakpoints: (
   sm: 576px,
   md: 768px,
   lg: 1180px,
-  xl: 1700px
+  xl: 1700px,
+  xxl: 1920px
 );
 
 // Grid containers
