--- a/resources/assets/styles/components/_accordion.scss
+++ b/resources/assets/styles/components/_accordion.scss
@@ -14,7 +14,7 @@
 
         &::before {
           content: "";
-          background-image: url("../../images/svg/arrow-accordion.svg");
+          background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='18' height='18' viewBox='0 0 18 18'%3E%3Cdefs%3E%3Cstyle%3E .cls-1 %7B fill: %23ff1324; fill-rule: evenodd; %7D %3C/style%3E%3C/defs%3E%3Cpath id='arrow' data-name='arrow' class='cls-1' d='M435,9401a9,9,0,1,1-9-9A9,9,0,0,1,435,9401Zm-12.954-3.35-1.935,1.95,5.923,5.88,5.923-5.88-1.934-1.95-3.989,3.96Z' transform='translate(-417 -9392)'/%3E%3C/svg%3E");
           height: 18px;
           width: 18px;
           display: inline-block;
