--- a/resources/assets/styles/components/_buttons.scss
+++ b/resources/assets/styles/components/_buttons.scss
@@ -173,3 +173,22 @@ $btn-block-spacing-y: 0.5rem !default;
     }
   }
 }
+
+.button-down {
+  cursor: pointer;
+  color: $danger;
+  text-decoration: underline;
+  font-size: 16px;
+  border: none;
+  vertical-align: bottom;
+  background: transparent;
+
+  &::after {
+    margin-bottom: -3px;
+    display: inline-block;
+    content: "";
+    height: 16px;
+    width: 16px;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%23DC3545' class='bi bi-arrow-down' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z'/%3E%3C/svg%3E");
+  }
+}
