--- a/resources/assets/styles/components/_main-slider.scss
+++ b/resources/assets/styles/components/_main-slider.scss
@@ -5,21 +5,45 @@
 }
 
 .main-slider {
+  max-width: map-get($grid-breakpoints, "xxl");
+  margin: 0 auto;
+
   &__header {
     color: $danger;
     text-transform: uppercase;
     font-size: 48px;
     font-weight: bold;
     margin-bottom: 30px;
+
+    @media screen and (max-width: map-get($grid-breakpoints, "lg")) {
+      font-size: 30px;
+    }
+
+    @media screen and (max-width: map-get($grid-breakpoints, "lg")) {
+      font-size: 30px;
+    }
+
+    @media screen and (max-width: map-get($grid-breakpoints, "md")) {
+      margin-bottom: 10px;
+    }
   }
 
   &__text {
     font-size: 20px;
     color: $white;
     margin-bottom: 40px;
+
+    @media screen and (max-width: map-get($grid-breakpoints, "lg")) {
+      font-size: 16px;
+    }
+
+    @media screen and (max-width: map-get($grid-breakpoints, "md")) {
+      margin-bottom: 10px;
+    }
   }
 }
 
 .carousel-caption {
-  padding-bottom: 188px;
+  bottom: 50%;
+  transform: translateY(50%);
 }
