--- a/resources/assets/styles/components/_services-cat.scss
+++ b/resources/assets/styles/components/_services-cat.scss
@@ -1,23 +1,5 @@
 .services-cat {
   list-style: none;
-  padding: 0;
-  margin: 50px 0 50px;
-}
-
-.services-cat > li {
-  h3 {
-    font-size: 20px;
-    font-weight: bold;
-    margin-bottom: 30px;
-  }
-
-  text-align: center;
-  display: block;
-  margin: 50px 0;
-}
-
-.services-cat > li > ul {
-  list-style: none;
   display: flex;
   flex-basis: auto;
   flex-wrap: wrap;
@@ -27,7 +9,9 @@
   margin: 0;
 }
 
-.services-cat > li > ul > li {
+.services-cat > li {
+  text-align: center;
+  display: block;
   border: 1px solid red;
   background: $white;
   min-width: 250px;
@@ -38,7 +22,7 @@
       text-decoration: none;
     }
 
-    padding: 7px 0;
+    padding: 7px;
     display: block;
   }
 }
