--- a/resources/assets/styles/sections/_about.scss
+++ b/resources/assets/styles/sections/_about.scss
@@ -2,15 +2,7 @@
   background-color: $gray-100;
   padding: 40px 0;
 
-  &__gallery {
-    display: grid;
-    grid-template-columns: repeat(4, minmax(200px, 1fr));
-    grid-gap: 5px;
-  }
-
-  &__img {
-    img {
-      width: 100%;
-    }
+  &__text {
+    margin: 25px 0;
   }
 }
