--- a/resources/assets/styles/sections/_services.scss
+++ b/resources/assets/styles/sections/_services.scss
@@ -7,6 +7,7 @@
     grid-template-columns: min-content;
     grid-template-rows: 1fr minmax(auto, 100px);
     justify-content: center;
+    margin-bottom: 15px;
   }
 
   &__cat {
