--- a/resources/assets/styles/sections/_staff.scss
+++ b/resources/assets/styles/sections/_staff.scss
@@ -7,6 +7,10 @@
     background-color: $white;
     box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.05);
     margin-top: 30px;
+
+    @media screen and (max-width: 768px) {
+      text-align: center;
+    }
   }
 
   &__description {
@@ -18,6 +22,11 @@
     position: absolute;
     bottom: 30px;
     left: 0;
+
+    @media screen and (max-width: 768px) {
+      left: 50%;
+      transform: translateX(-50%);
+    }
   }
 
   &__name {
