--- a/resources/assets/styles/common/_variables.scss
+++ b/resources/assets/styles/common/_variables.scss
@@ -92,5 +92,6 @@ $carousel-control-next-icon-bg:      url("data:image/svg+xml,<svg xmlns='http://
 @import "~bootstrap/scss/images";
 @import "~bootstrap/scss/nav";
 @import "~bootstrap/scss/navbar";
+@import "~bootstrap/scss/dropdown";
 @import "~bootstrap/scss/carousel";
 @import "~bootstrap/scss/transitions";
