--- a/resources/assets/styles/sections/_how-work.scss
+++ b/resources/assets/styles/sections/_how-work.scss
@@ -85,19 +85,19 @@
       }
 
       li:first-child::before {
-        background-image: url("http://ch82371-wordpress-5.tw1.ru/wp-content/uploads/2022/01/1.png");
+        background-image: url("https://reallife-clinic.ru/wp-content/uploads/2022/01/1.png");
       }
 
       li:nth-child(2)::before {
-        background-image: url("http://ch82371-wordpress-5.tw1.ru/wp-content/uploads/2022/01/2.png");
+        background-image: url("https://reallife-clinic.ru/wp-content/uploads/2022/01/2.png");
       }
 
       li:nth-child(3)::before {
-        background-image: url("http://ch82371-wordpress-5.tw1.ru/wp-content/uploads/2022/01/3.png");
+        background-image: url("https://reallife-clinic.ru/wp-content/uploads/2022/01/3.png");
       }
 
       li:nth-child(4)::before {
-        background-image: url("http://ch82371-wordpress-5.tw1.ru/wp-content/uploads/2022/01/4.png");
+        background-image: url("https://reallife-clinic.ru/wp-content/uploads/2022/01/4.png");
       }
     }
   }
