--- a/resources/assets/styles/sections/_advantages.scss
+++ b/resources/assets/styles/sections/_advantages.scss
@@ -129,19 +129,19 @@
       }
 
       li:first-child::before {
-        background-image: url("http://ch82371-wordpress-5.tw1.ru/wp-content/uploads/2022/01/no-alcohol.png");
+        background-image: url("https://reallife-clinic.ru/wp-content/uploads/2022/01/no-alcohol.png");
       }
 
       li:nth-child(2)::before {
-        background-image: url("http://ch82371-wordpress-5.tw1.ru/wp-content/uploads/2022/01/people.png");
+        background-image: url("https://reallife-clinic.ru/wp-content/uploads/2022/01/people.png");
       }
 
       li:nth-child(3)::before {
-        background-image: url("http://ch82371-wordpress-5.tw1.ru/wp-content/uploads/2022/01/24-hours.png");
+        background-image: url("https://reallife-clinic.ru/wp-content/uploads/2022/01/24-hours.png");
       }
 
       li:nth-child(4)::before {
-        background-image: url("http://ch82371-wordpress-5.tw1.ru/wp-content/uploads/2022/01/prescription11.png");
+        background-image: url("https://reallife-clinic.ru/wp-content/uploads/2022/01/prescription11.png");
         width: 52px;
       }
     }
