--- a/resources/assets/styles/components/_services-cat.scss
+++ b/resources/assets/styles/components/_services-cat.scss
@@ -1,28 +1,21 @@
 .services-cat {
   list-style: none;
-  display: flex;
-  flex-basis: auto;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 35px 40px;
-  padding: 0;
-  margin: 0;
+  padding: 0 15px;
+  margin: 0 auto;
+  column-width: 14em;
+  column-gap: 2em;
 }
 
 .services-cat > li {
-  text-align: center;
   display: block;
-  border: 1px solid red;
-  background: $white;
-  min-width: 250px;
-  font-size: 16px;
+  margin-bottom: 15px;
 
   a {
     &:hover {
       text-decoration: none;
     }
 
-    padding: 7px;
+    line-height: 1;
     display: block;
   }
 }
